# SnakeCharmer

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  branch-protection.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml  security.yml
app/: config.py  docker_healthcheck.py  filters.py  health.py  http_client.py  medusa.py  models.py  notify.py  oauth_device.py  pending_queue.py  sync.py  sync_events.py  sync_history.py  trakt.py
app/webui/: __init__.py  config_io.py  csrf.py  oauth.py  routes.py  sync_manager.py  test_routes.py  token_service.py
app/webui/static/: style.css
app/webui/templates/: base.html  dashboard.html  dashboard_config_status.html  dashboard_sources.html  dashboard_stats.html  dashboard_status.html  library.html  pending.html
app/webui/templates/config/: health.html  medusa.html  notify.html  source_preview.html  source_row.html  sync.html  trakt.html  trakt_device_auth.html  trakt_token_status.html
app/webui/templates/sync/: history.html
tests/: test_config.py  test_config_io.py  test_csrf.py  test_docker_healthcheck.py  test_filters.py  test_health.py  test_http_client.py  test_main.py  test_medusa.py  test_notify.py  test_oauth_device.py  test_pending_queue.py  test_sync.py  test_sync_events.py  test_sync_history.py  test_sync_integration.py  test_timestamp_filters.py  test_token_service.py  test_trakt.py  test_webui.py  test_webui_a11y.py  test_webui_visual.py
