[project]
name = "snakecharmer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28,<3",
    "pyyaml>=6.0,<7",
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.6,<1",
    "httpx>=0.27,<1",
    "apprise>=1.7,<2",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
